[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nodeseek-signin"
version = "1.0.0"
description = "NodeSeek 论坛自动签到工具，支持多账号、多部署方式与多推送渠道"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["nodeseek", "signin", "automation", "checkin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Utilities",
]
dependencies = [
    "curl_cffi>=0.7.0",
    "requests>=2.31.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/yowiv/NodeSeek-Signin"
Repository = "https://github.com/yowiv/NodeSeek-Signin"
Issues = "https://github.com/yowiv/NodeSeek-Signin/issues"
Changelog = "https://github.com/yowiv/NodeSeek-Signin/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B904",  # raise-without-from-inside-except (existing pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["nodeseek"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
